started project, added sdl dependencie

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@
 /LeagueMovementPractice/LeagueMovementPractice.vcxproj
 /LeagueMovementPractice/LeagueMovementPractice.vcxproj.filters
 /LeagueMovementPractice/LeagueMovementPractice.vcxproj.user
+/LeagueMovementPractice/Debug
+/LeagueMovementPractice/deps
