--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@
 /LeagueMovementPractice/LeagueMovementPractice.vcxproj.user
 /LeagueMovementPractice/Debug
 /LeagueMovementPractice/deps
+/LeagueMovementPractice/.vs/LeagueMovementPractice/FileContentIndex
